--- a/index.html
+++ b/index.html
@@ -2,11 +2,103 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Техномарт</title>
+    <title>Техномарт "Интернет магазин для строительства и ремонта"</title>
   </head>
-  <body>
+<body>
+  <header class="main-header">
+  <!--Логотип-->
+    <nav class="main-navigation">
+      <a class="top-header-logo">
+      <img src="img/index-logo.svg" width="100" height="100" alt="Логотип Техномарт">
+      </a>
+  <!--Закладки, Корзина и Оформление заказа-->
+    <span><a href="bookmarks.html">Закладки</a></span>
+    <span><a href="basket.html">Корзина</a></span>
+    <span><a href="order.html">Оформление заказа</a></span>
+  <!--Телефон и адрес-->
+    <span>+7 (812) 555-05-55<br> г.Санкт-Петербург, ул. Б.Конюшенная д.19/8</span>
+  <!--Меню навигации по сайту-->
+    <ul class="top-site-navigation">
+      <li><a href="index.html">Главная</a></li>
+      <li><a href="info.html">Компания</a></li>
+      <li><a href="catalogue.html">Каталог</a></li>
+      <li><a href="news.html">Новости</a></li>
+      <li><a href="sale.html">Спецпредложения</a></li>
+      <li><a href="delivery.html">Доставка</a></li>
+      <li><a href="contacts.html">Контакты</a></li>
+     </ul>
+  <!--Регистрация и вход-->
+     <ul class="user-navigation">
+       <li class="login-link">Вход</li>
+       <li class="registration-link">Регистрация</li>
+     </ul>
+    </nav>
+  <!--Поиск-->
+    <form action="" method="get">
+     <button type="submit"></button>
+     <input placeholder="Поиск" type="search">
+    </form>
 
+   </header>
+   <main>
     <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
-
+  </main>
+    <footer class="main-footer">
+  <!--Логотип-->
+      <a class="down-header-logo">
+      <img src="img/index-logo.svg" width="100" height="100" alt="Логотип Техномарт">
+      </a>
+  <!--Навигация подвал-->
+    <ul class="down-site-navigation">
+      <li><a href="info.html">Компания</a></li>
+      <li><a href="catalogue.html">Каталог</a></li>
+      <li><a href="news.html">Новости</a></li>
+      <li><a href="delivery.html">Доставка</a></li>
+      <li><a href="contacts.html">Контакты</a></li>
+    </ul>
+   <!--Ассортимент-->
+    <ul class="down-range">
+      <li><a href="materials.html">Материалы</a></li>
+      <li><a href="equipment.html">Техника</a></li>
+      <li><a href="tools.html">Инструмент</a></li>
+      <li><a href="news.html">Новости</a></li>
+      <li><a href="sale.html">Спецпредложения</a></li>
+     </ul>
+      <p class="footer-develop">
+         © 2010-2019 Компания "Техномарт"<br> Все права защищены
+      </p>
+      <p class="footer-address">
+         г.Санкт-Петербург, ул. Б.Конюшенная д.19/8 <br> +7 (812) 555-05-55
+      </p>
+     <div class="footer-social">
+      <ul>
+        <li><a class="social-button" href="#">Вконтакте</a></li>
+        <li><a class="social-button" href="#">Фейсбук</a></li>
+        <li><a class="social-button" href="#">Инстаграм</a></li>
+      </ul>
+     </div>
+       <p class="footer-copyright">
+        <b>Разработано-</b>
+        <a class="button" href="https://htmlacademy.ru">HTML Academy</a>
+       </p>
+       <p class="footer-feedback">
+        <b>Обратная связь:</b>
+        <b>mail@htmlacademy.ru</b>
+       </p>
+    </footer>
+  <!--Форма Личный кабинет-->
+       <section clas="modal modal-login">
+         <h2>Войти</h2>
+         <p>Введите свой логин и пароль.</p>
+         <!--Здесь будет форма-->
+         <span class="modal-close">x</span>
+       </section>
+  <!--Регистрация-->
+       <section class="modal mpdal-registration">
+         <h2>Регистрация</h2>
+         <p>Введите свой логин и пароль.</p>
+         <!--Здесь будет форма-->
+         <span class="modal-close">x</span>
+       </section>
   </body>
 </html>
