--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <a href="basket.html">Корзина:<span>0</span></a>
     <a href="order.html">Оформление заказа</a>
   <!--Телефон и адрес-->
-    <p><a href="tel:>+78125550555">+7(812) 555-05-55</a></p><p>г.Санкт-Петербург, ул. Б.Конюшенная д.19/8</p>
+    <p><a href="tel:+78125550555">+7(812) 555-05-55</a></p><p>г.Санкт-Петербург, ул. Б.Конюшенная д.19/8</p>
   <!--Регистрация и вход-->
      <ul class="user-navigation">
        <li> <a href="login-link">Вход:</a></li>
@@ -31,7 +31,7 @@
     <ul class="top-site-navigation">
       <li><a href="index.html">Главная</a></li>
       <li><a href="info.html">Компания</a></li>
-      <li><a href="catalogue.html">Каталог</a></li>
+      <li><a href="catalog.html">Каталог</a></li>
       <li><a href="news.html">Новости</a></li>
       <li><a href="sale.html">Спецпредложения</a></li>
       <li><a href="delivery.html">Доставка</a></li>
@@ -42,11 +42,11 @@
       <main class="supermarket-main">
         <h1>Интернет магазин строительных материалов и инструментов для ремонта</h1>
   <!--Товары и усылуги-->
-     <span class="materials">Материалы<a class="botton" href="materials.html">На любой вкус</a></span>
-     <span class="tools">Инструменты<a class="botton" href="tools.html">На все случаи</a></span>
-     <span class="equipment">Техника<a class="botton" href="equipment.html">Для стройки</a></span>
-     <span class="sale">Скидки 50%<a class="botton" href="sale.html">На 350 товаров</a></span>
-     <span class="delivery">Доставка<a class="botton" href="delivery.html">Бесплатно</a></span>
+     <div class="materials">Материалы<a class="botton" href="materials.html">На любой вкус</a></div>
+     <div class="tools">Инструменты<a class="botton" href="tools.html">На все случаи</a></div>
+     <div class="equipment">Техника<a class="botton" href="equipment.html">Для стройки</a></div>
+     <div class="sale">Скидки 50%<a class="botton" href="sale.html">На 350 товаров</a></div>
+     <div class="delivery">Доставка<a class="botton" href="delivery.html">Бесплатно</a></div>
   <!--Здесь будет слайдер-->
   <!--Популярные товары-->
     <section class="popular-goods">
@@ -54,30 +54,23 @@
         <a href="popular-goods.html">Все популярные товары</a>
           <ul class="popular-goods-list">
             <li class="popular-goods-item">
-              <h3>Перфоратор</h3>
-              <p><img src="#" alt="Популярный товар"></p>
-              <span class="popular-good-name">BFG 9000</span>
+              <h3>Перфоратор BOSCH BFG 9000</h3>
+              <img src="#" alt="Популярный товар">
               <span class="popular-old-price">32500 Р.</span>
               <span class="popular-new-price">25500 Р.</span>
             </li>
-              <h3>Перфоратор</h3>
-              <p><img src="#" alt="Популярный товар"></p>
-              <span class="popular-good-name">BFG 3000</span>
+              <h3>Перфоратор BOSCH BFG 3000</h3>
+              <img src="#" alt="Популярный товар">
               <span class="popular-old-price">22500 Р.</span>
               <span class="popular-new-price">15500 Р.</span>
             </li>
-            <h3>Перфоратор</h3>
-              <p><img src="#" alt="Популярный товар"></p>
-              <span class="popular-good-name">BFG 6000</span>
+            <h3>Перфоратор BOSCH BFG 6000</h3>
+              <img src="#" alt="Популярный товар">
               <span class="popular-old-price">30500 Р.</span>
               <span class="popular-new-price">25500 Р.</span>
             </li>
-            <h3>Перфоратор</h3>
-            <figure>
-              <p><img src="#" alt="Популярный товар"></p>
-              <figcaption>New</figcaption>
-            </figure>
-              <span class="popular-good-name">BFG 2000</span>
+            <h3>Перфоратор BOSCH BFG 2000</h3>
+              <img src="#" alt="Популярный товар">
               <span class="popular-old-price">22500 Р.</span>
             </li>
       </section>
@@ -168,7 +161,7 @@
               <p>ЖелДорЭкспедиция</p>
             </li>
           </ul>
-          <p><a class="about-us" href="info.html">Подробнее о компании</a></p>
+          <p><a class="botton" href="info.html">Подробнее о компании</a></p>
         </section>
         <section class="contact">
           <h2>Контакты</h2>
@@ -177,6 +170,9 @@
           </p>
           <a class="map-main"<img src="#" width="100" height="100" alt="улица Большая Конюшенная дом 19"></a>
        <!--Здесь будет форма обращения-->
+        </section>
+        <section>
+          <p <a class="button" href="writeus.html">Заблудились?Напишите нам!</a></p>
         </section>
       </main>
     <footer class="main-footer">
@@ -205,11 +201,8 @@
          © 2010-2019 Компания "Техномарт"<br> Все права защищены
       </p>
     <!--Адрес и телефон-->
-      <p class="footer-address">
-         г.Санкт-Петербург, ул. Б.Конюшенная д.19/8
-      </p>
       <p class="footer-phone">
-        <a href="tel:>+78125550555">+7 (812) 555-05-55</a>
+        <p><a href="tel:+78125550555">+7(812) 555-05-55</a></p><p>г.Санкт-Петербург, ул. Б.Конюшенная д.19/8</p>
       </p>
     <!--Соц.сети-->
       <ul class="social-link">
@@ -224,7 +217,7 @@
        </p>
        <p class="footer-feedback">
         <p>Обратная связь:</p>
-        <p><a href="mailto:mail@htmlacademy.ru">mailto:mail@htmlacademy.ru</a></p>
+        <p><a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a></p>
        </p>
     </footer>
   <!--Форма Обращение-->
