--- a/catalog.html
+++ b/catalog.html
@@ -21,10 +21,11 @@
   <a href="order.html">Оформление заказа</a>
 <!--Телефон и адрес-->
   <p><a href="tel:+78125550555">+7(812) 555-05-55</a></p><p>г.Санкт-Петербург, ул. Б.Конюшенная д.19/8</p>
-<!--Регистрация и вход-->
+<!--Персональные настройки и покупки-->
    <ul class="user-navigation">
-     <li> <a href="login-link">Вход:</a></li>
-     <li> <a href="registration-link">Регистрация:</a></li>
+     <li>Равшан Джумшутович</li>
+     <li><a href="login-link">Мои заказы</a></li>
+     <li><a href="registration-link">Личный кабинет</a></li>
    </ul>
 <!--Меню навигации по сайту-->
 <nav class="catalog-navigation">
@@ -42,80 +43,119 @@
 <main class="supermarket-catalog">
    <h1>Интернет магазин строительных материалов и инструментов для ремонта</h1>
 <!--Навигационная цепочка-->
-  <ul class="breadcrumbs">
-    <li><a href="index.html">Главная</a></li>
-    <li><a href="catalog.html">Магазин</a></li>
-    <li><a href="tools.html">Инструмент</a></li>
-    <li class="breadcrumbs-current">Перфораторы</li>
-  </ul>
+   <ul class="breadcrumbs">
+     <li><a href="index.html">Главная</a></li>
+     <li><a href="catalog.html">Каталог</a></li>
+     <li><a href="tools.html">Инструмент</a></li>
+     <li class="breadcrumbs-current">Перфораторы</li>
+   </ul>
+<!--Фильрт-слайдер-->
+
+<!--Фильтры-->
   <h2>Перфораторы</h2>
-<!--Фильтр товаров-->
     <section class="filters">
-      <h2 class="visually-hidden">Фильтр товаров</h2>
-<!--Форма для фильтра-->
+      <section class="filters">
+              <h2 class=Фильтр:</h2>
+              <form class="filter" method="get" action="https://echo.htmlacademy.ru">
+                <fieldset>
+                  <legend>Производители:</legend>
+                  <ul>
+                    <li class="filter-option">
+                      <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="Bosch" id="Bosch" checked>
+                      <label for="Bosch">Bosch</label>
+                    </li>
+                    <li class="filter-option">
+                      <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="Интерскол" id="Интерскол">
+                      <label for="Интерскол">Интерскол</label>
+                    </li>
+                    <li class="filter-option">
+                      <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="Makita" id="Makita" checked>
+                      <label for="Makita">Makita</label>
+                    </li>
+                    <li class="filter-option">
+                      <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="Dewalt" id="Dewalt">
+                      <label for="Dewalt">Dewalt</label>
+                    </li>
+                    <li class="filter-option">
+                      <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="Hitachi" id="Hitachi">
+                      <label for="Hitachi">Hitachi</label>
+                    </li>
+                  </ul>
+                </fieldset>
+                <fieldset>
+                  <legend>Питание::</legend>
+                  <ul>
+                    <li class="filter-option">
+                      <input class="visually-hidden filter-input filter-input-radio" type="radio" name="power-supply" value="battery" id="filter-battery"checked>
+                      <label for="filter-battery">Аккумуляторные</label>
+                    </li>
+                    <li class="filter-option">
+                      <input class="visually-hidden filter-input filter-input-radio" type="radio" name="power-supply" value="network" id="filter-network">
+                      <label for="filter-network">Сетевые</label>
+                    </li>
+                  </ul>
+                </fieldset>
+                <button type="submit" class="filter-button button">
+                  Показать
+                </button>
     </section>
 <!--Каталог товаров-->
   <section class="catalog-goods">
    <h2 class="visually-hidden">Список Перфораторов</h2>
     <ul class="catalog-goods-list">
        <li class="catalog-goods-item">
-   <h3>Перфоратор</h3>
-     <p><img src="#" alt="Перфоратор"></p>
-         <span class="catalog-good-name">BOSCH BFG 3000</span>
-         <span class="catalog-old-price">22500 Р.</span>
+   <h3>Перфоратор BOSCH BFG 3000</h3>
+         <img src="#" alt="Перфоратор">
+         <span class="catalog-old-price"><span>22500 Р.</span></span>
          <span class="catalog-new-price">15500 Р.</span>
        </li>
-    <h3>Перфоратор</h3>
-       <p><img src="#" alt="Перфоратор"></p>
-          <span class="catalog-good-name">BOSCH BFG 6000</span>
-          <span class="catalog-old-price">30500 Р.</span>
-          <span class="catalog-new-price">25500 Р.</span>
+    <h3>Перфоратор BOSCH BFG 6000</h3>
+          <img src="#" alt="Перфоратор">
+          <span class="catalog-old-price"><span>30500 Р.</span></span>
+          <span class="catalog-new-price"><span>25500 Р.</span></span>
       </li>
-    <h3>Перфоратор</h3>
-        <p><img src="#" alt="Перфоратор"></p>
-          <span class="catalog-good-name">BOSCH BFG 2000</span>
-    <span class="catalog-new-price">12500 Р.</span>
+    <h3>Перфоратор BOSCH BFG 2000</h3>
+          <img src="#" alt="Перфоратор">
+          <span class="catalog-new-price"><span>12500 Р.</span></span>
       </li>
-    <h3>Перфоратор</h3>
-        <p><img src="#" alt="Перфоратор"></p>
-          <span class="catalog-good-name">BOSCH BFG 3000</span>
-          <span class="catalog-old-price">22500 Р.</span>
-          <span class="catalog-new-price">15500 Р.</span>
+    <h3>Перфоратор BOSCH BFG 3000</h3>
+          <img src="#" alt="Перфоратор">
+          <span class="catalog-old-price"><span>22500 Р.</span></span>
+          <span class="catalog-new-price"><span>15500 Р.</span></span>
       </li>
-    <h3>Перфоратор</h3>
-        <p><img src="#" alt="Перфоратор"></p>
-          <span class="catalog-good-name">BOSCH BFG 6000</span>
-          <span class="catalog-old-price">30500 Р.</span>
-          <span class="catalog-new-price">25500 Р.</span>
+    <h3>Перфоратор BOSCH BFG 6000</h3>
+          <img src="#" alt="Перфоратор">
+          <span class="catalog-old-price"><span>30500 Р.</span></span>
+          <span class="catalog-new-price"><span>25500 Р.</span></span>
       </li>
-    <h3>Перфоратор</h3>
-        <p><img src="#" alt="Перфоратор"></p>
-          <span class="catalog-good-name">BOSCH BFG 2000</span>
-          <span class="catalog-new-price">12500 Р.</span>
+    <h3>Перфоратор BOSCH BFG 2000</h3>
+          <img src="#" alt="Перфоратор">
+          <span class="catalog-new-price"><span>12500 Р.</span></span>
       </li>
-    <h3>Перфоратор</h3>
-        <p><img src="#" alt="Перфоратор"></p>
-          <span class="catalog-good-name">BOSCH BFG 3000</span>
-          <span class="catalog-old-price">22500 Р.</span>
-          <span class="catalog-new-price">15500 Р.</span>
+    <h3>Перфоратор BOSCH BFG 3000</h3>
+          <img src="#" alt="Перфоратор">
+          <span class="catalog-old-price"><span>22500 Р.</span></span>
+          <span class="catalog-new-price"><span>15500 Р.</span></span>
       </li>
-    <h3>Перфоратор</h3>
-        <p><img src="#" alt="Перфоратор"></p>
-          <span class="catalog-good-name">BOSCH BFG 6000</span>
-          <span class="catalog-old-price">30500 Р.</span>
-          <span class="catalog-new-price">25500 Р.</span>
+    <h3>Перфоратор BOSCH BFG 6000</h3>
+          <img src="#" alt="Перфоратор">
+          <span class="catalog-old-price"><span>30500 Р.</span></span>
+          <span class="catalog-new-price"><span>25500 Р.</span></span>
       </li>
-    <h3>Перфоратор</h3>
-        <p><img src="#" alt="Перфоратор"></p>
-          <span class="catalog-good-name">BOSCH BFG 2000</span>
-          <span class="catalog-new-price">12500 Р.</span>
+    <h3>Перфоратор BOSCH BFG 2000</h3>
+          <img src="#" alt="Перфоратор">
+          <span class="catalog-new-price"><span>12500 Р.</span></span>
       </li>
     </ul>
+<!--Перемещение между страницами-->
+<section class="chenge-page">
     <ul class="pagination-list">
       <li class="pagination-item"><a href="#">1</a></li>
       <li class="pagination-item panagination-item-current"><a>2</a></li>
       <li class="pagination-item"><a href="#">3</a></li>
     </ul>
+    <button class="button-next" type="button">Следующая</button>
+</section>
 <!--Описание товара-->
   <article class="good-discription">
     Перфоратор - универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне.
@@ -151,7 +191,7 @@
    </p>
  <!--Адрес и телефон-->
    <p class="footer-phone">
-     <a href="tel:+78125550555">+7 (812) 555-05-55</a>
+     <p><a href="tel:+78125550555">+7(812) 555-05-55</a></p><p>г.Санкт-Петербург, ул. Б.Конюшенная д.19/8</p>
    </p>
  <!--Соц.сети-->
    <ul class="social-link">
