--- a/index.html
+++ b/index.html
@@ -41,13 +41,27 @@
    </header>
       <main class="supermarket-main">
         <h1>Интернет магазин строительных материалов и инструментов для ремонта</h1>
-  <!--Товары и усылуги-->
+  <!--Слайдер с рекламой-->
+  <section class="slider-top">
+    <ul class="advertising-slider">
+      <li class="slide-showing">Slide 1</li>
+      <li class="slide">Slide 2</li>
+    </ul>
+  <a class="prev" onclick="plusslider(-1)">&#10094;</a>
+  <a class="next" onclick="plusslider(1)">&#10095;</a>
+  <div class="dot-container">
+    <span class="dot" onclick="currentslide1"></span>
+    <span class="dot" onclick="currentslide2"><</span>
+  </div>
+  <a href="drill.html">Открыть каталог</a>
+</section>
+  <!--Товары и услуги-->
      <div class="materials">Материалы<a class="botton" href="materials.html">На любой вкус</a></div>
      <div class="tools">Инструменты<a class="botton" href="tools.html">На все случаи</a></div>
      <div class="equipment">Техника<a class="botton" href="equipment.html">Для стройки</a></div>
      <div class="sale">Скидки 50%<a class="botton" href="sale.html">На 350 товаров</a></div>
      <div class="delivery">Доставка<a class="botton" href="delivery.html">Бесплатно</a></div>
-  <!--Здесь будет слайдер-->
+  </section>
   <!--Популярные товары-->
     <section class="popular-goods">
       <h2>Популярные товары</h2>
@@ -56,22 +70,22 @@
             <li class="popular-goods-item">
               <h3>Перфоратор BOSCH BFG 9000</h3>
               <img src="#" alt="Популярный товар">
-              <span class="popular-old-price">32500 Р.</span>
-              <span class="popular-new-price">25500 Р.</span>
+              <span class="popular-old-price"><span>32500 Р.</span></span>
+              <span class="popular-new-price"><span>25500 Р.</span></span>
             </li>
               <h3>Перфоратор BOSCH BFG 3000</h3>
               <img src="#" alt="Популярный товар">
-              <span class="popular-old-price">22500 Р.</span>
-              <span class="popular-new-price">15500 Р.</span>
+              <span class="popular-old-price"><span>22500 Р.</span></span>
+              <span class="popular-new-price"><span>15500 Р.</span></span>
             </li>
             <h3>Перфоратор BOSCH BFG 6000</h3>
               <img src="#" alt="Популярный товар">
-              <span class="popular-old-price">30500 Р.</span>
-              <span class="popular-new-price">25500 Р.</span>
+              <span class="popular-old-price"><span>30500 Р.</span></span>
+              <span class="popular-new-price"><span>25500 Р.</span></span>
             </li>
             <h3>Перфоратор BOSCH BFG 2000</h3>
               <img src="#" alt="Популярный товар">
-              <span class="popular-old-price">22500 Р.</span>
+              <span class="popular-old-price"><span>22500 Р.</span></span>
             </li>
       </section>
   <!--Популярные производители-->
@@ -229,7 +243,10 @@
   <!--Карта-->
        <section class="modal modal-map">
          <h2 class="visually-hidden">Карта</h2>
-         <!--Здесь будет форма-->
+         <p>
+          <a img src="img/map.jpg width="100" height="100" alt=""Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург">
+        </p>
+        <button class="modal-close" type="button">Закрыть</button>
          <span class="modal-close">x</span>
        </section>
     </body>
