--- a/catalog.html
+++ b/catalog.html
@@ -104,51 +104,50 @@
    <h2 class="visually-hidden">Список Перфораторов</h2>
     <ul class="catalog-goods-list">
        <li class="catalog-goods-item">
-   <h3>Перфоратор BOSCH BFG 3000</h3>
-         <img src="#" alt="Перфоратор">
-         <span class="catalog-old-price"><span>22500 Р.</span></span>
-         <span class="catalog-new-price">15500 Р.</span>
+          <h3>Перфоратор BOSCH BFG 3000</h3>
+           <img src="#" alt="Перфоратор BOSCH BFG 3000">
+           <span class="catalog-old-price"><span>22500</span>Р.</span>
+           <span class="catalog-new-price">15500 Р.</span>
        </li>
-    <h3>Перфоратор BOSCH BFG 6000</h3>
-          <img src="#" alt="Перфоратор">
-          <span class="catalog-old-price"><span>30500 Р.</span></span>
-          <span class="catalog-new-price"><span>25500 Р.</span></span>
-      </li>
-    <h3>Перфоратор BOSCH BFG 2000</h3>
-          <img src="#" alt="Перфоратор">
-          <span class="catalog-new-price"><span>12500 Р.</span></span>
-      </li>
-    <h3>Перфоратор BOSCH BFG 3000</h3>
-          <img src="#" alt="Перфоратор">
-          <span class="catalog-old-price"><span>22500 Р.</span></span>
-          <span class="catalog-new-price"><span>15500 Р.</span></span>
-      </li>
-    <h3>Перфоратор BOSCH BFG 6000</h3>
-          <img src="#" alt="Перфоратор">
-          <span class="catalog-old-price"><span>30500 Р.</span></span>
-          <span class="catalog-new-price"><span>25500 Р.</span></span>
-      </li>
-    <h3>Перфоратор BOSCH BFG 2000</h3>
-          <img src="#" alt="Перфоратор">
-          <span class="catalog-new-price"><span>12500 Р.</span></span>
-      </li>
-    <h3>Перфоратор BOSCH BFG 3000</h3>
-          <img src="#" alt="Перфоратор">
-          <span class="catalog-old-price"><span>22500 Р.</span></span>
-          <span class="catalog-new-price"><span>15500 Р.</span></span>
-      </li>
-    <h3>Перфоратор BOSCH BFG 6000</h3>
-          <img src="#" alt="Перфоратор">
-          <span class="catalog-old-price"><span>30500 Р.</span></span>
-          <span class="catalog-new-price"><span>25500 Р.</span></span>
-      </li>
-    <h3>Перфоратор BOSCH BFG 2000</h3>
-          <img src="#" alt="Перфоратор">
-          <span class="catalog-new-price"><span>12500 Р.</span></span>
-      </li>
+          <h3>Перфоратор BOSCH BFG 6000</h3>
+           <img src="#" alt="Перфоратор BOSCH BFG 6000">
+           <span class="catalog-old-price"><span>30500</span>Р.</span>
+           <span class="catalog-new-price"><span>25500</span>Р.</span>
+       </li>
+          <h3>Перфоратор BOSCH BFG 2000</h3>
+           <img src="#" alt="Перфоратор BOSCH BFG 2000">
+           <span class="catalog-new-price"><span>12500</span>Р.</span>
+       </li>
+          <h3>Перфоратор BOSCH BFG 3000</h3>
+           <img src="#" alt="Перфоратор BOSCH BFG 3000">
+           <span class="catalog-old-price"><span>22500</span>Р.</span>
+           <span class="catalog-new-price"><span>15500</span>Р.</span>
+       </li>
+         <h3>Перфоратор BOSCH BFG 6000</h3>
+           <img src="#" alt="Перфоратор BOSCH BFG 6000">
+           <span class="catalog-old-price"><span>30500</span>Р.</span>
+           <span class="catalog-new-price"><span>25500</span>Р.</span>
+       </li>
+         <h3>Перфоратор BOSCH BFG 2000</h3>
+          <img src="#" alt="Перфоратор BOSCH BFG 2000">
+          <span class="catalog-new-price"><span>12500</span>Р.</span>
+       </li>
+         <h3>Перфоратор BOSCH BFG 3000</h3>
+           <img src="#" alt="Перфоратор BOSCH BFG 3000">
+           <span class="catalog-old-price"><span>22500</span>Р.</span>
+           <span class="catalog-new-price"><span>15500</span>Р.</span>
+       </li>
+         <h3>Перфоратор BOSCH BFG 6000</h3>
+           <img src="#" alt="Перфоратор BOSCH BFG 6000">
+           <span class="catalog-old-price"><span>30500</span>Р.</span>
+           <span class="catalog-new-price"><span>25500</span>Р.</span>
+       </li>
+         <h3>Перфоратор BOSCH BFG 2000</h3>
+           <img src="#" alt="Перфоратор BOSCH BFG 2000">
+           <span class="catalog-new-price"><span>12500</span>Р.</span>
+       </li>
     </ul>
 <!--Перемещение между страницами-->
-<section class="chenge-page">
     <ul class="pagination-list">
       <li class="pagination-item"><a href="#">1</a></li>
       <li class="pagination-item panagination-item-current"><a>2</a></li>
