--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Техномарт "Интернет магазин для строительства и ремонта"</title>
   </head>
 <body>
-  <header class="main-header">
+ <header class="main-header">
   <!--Логотип-->
       <a class="top-header-logo">
         <img src="img/index-logo.svg" width="100" height="100" alt="Логотип Техномарт">
@@ -38,11 +38,11 @@
       <li><a href="contacts.html">Контакты</a></li>
      </ul>
    </nav>
-   </header>
-      <main class="supermarket-main">
+ </header>
+<main class="supermarket-main">
         <h1>Интернет магазин строительных материалов и инструментов для ремонта</h1>
   <!--Слайдер с рекламой-->
-  <section class="slider-top">
+ <section class="slider-top">
     <ul class="advertising-slider">
       <li class="slide-showing">Slide 1</li>
       <li class="slide">Slide 2</li>
@@ -51,17 +51,16 @@
   <a class="next" onclick="plusslider(1)">&#10095;</a>
   <div class="dot-container">
     <span class="dot" onclick="currentslide1"></span>
-    <span class="dot" onclick="currentslide2"><</span>
+    <span class="dot" onclick="currentslide2"></span>
   </div>
   <a href="drill.html">Открыть каталог</a>
-</section>
+ </section>
   <!--Товары и услуги-->
      <div class="materials">Материалы<a class="botton" href="materials.html">На любой вкус</a></div>
      <div class="tools">Инструменты<a class="botton" href="tools.html">На все случаи</a></div>
      <div class="equipment">Техника<a class="botton" href="equipment.html">Для стройки</a></div>
      <div class="sale">Скидки 50%<a class="botton" href="sale.html">На 350 товаров</a></div>
      <div class="delivery">Доставка<a class="botton" href="delivery.html">Бесплатно</a></div>
-  </section>
   <!--Популярные товары-->
     <section class="popular-goods">
       <h2>Популярные товары</h2>
@@ -69,23 +68,23 @@
           <ul class="popular-goods-list">
             <li class="popular-goods-item">
               <h3>Перфоратор BOSCH BFG 9000</h3>
-              <img src="#" alt="Популярный товар">
-              <span class="popular-old-price"><span>32500 Р.</span></span>
-              <span class="popular-new-price"><span>25500 Р.</span></span>
+              <img src="#" alt="Перфоратор BOSCH BFG 9000">
+              <span class="popular-old-price"><span>32500</span>Р.</span>
+              <span class="popular-new-price"><span>25500</span>Р.</span>
             </li>
               <h3>Перфоратор BOSCH BFG 3000</h3>
-              <img src="#" alt="Популярный товар">
-              <span class="popular-old-price"><span>22500 Р.</span></span>
-              <span class="popular-new-price"><span>15500 Р.</span></span>
+              <img src="#" alt="Перфоратор BOSCH BFG 3000">
+              <span class="popular-old-price"><span>22500</span>Р.</span>
+              <span class="popular-new-price"><span>15500</span>Р.</span>
             </li>
             <h3>Перфоратор BOSCH BFG 6000</h3>
-              <img src="#" alt="Популярный товар">
-              <span class="popular-old-price"><span>30500 Р.</span></span>
-              <span class="popular-new-price"><span>25500 Р.</span></span>
+              <img src="#" alt="Перфоратор BOSCH BFG 6000">
+              <span class="popular-old-price"><span>30500</span>Р.</span>
+              <span class="popular-new-price"><span>25500</span>Р.</span>
             </li>
             <h3>Перфоратор BOSCH BFG 2000</h3>
-              <img src="#" alt="Популярный товар">
-              <span class="popular-old-price"><span>22500 Р.</span></span>
+              <img src="#" alt="Перфоратор BOSCH BFG 2000">
+              <span class="popular-old-price"><span>22500</span>Р.</span>
             </li>
       </section>
   <!--Популярные производители-->
@@ -93,54 +92,46 @@
         <h2>Популярные производители</h2>
           <a href="popular-brands.html">Все популярные производители</a>
             <ul class="popular-brands-list">
-              <li class="popular-brands-item">
-                <p><a class="popular-brands-main" href="popular-brands.html">
+               <li class="popular-brands-item">
+                 <a class="popular-brands-main" href="popular-brands.html">
                    <img src="#" alt="Популярный производитель">
                    </a>
-                </p>
-              </li>
-              <li class="popular-brands-item">
-                <p><a class="popular-brands-main" href="popular-brands.html">
-                    <img src="#" alt="Популярный производитель">
-                   </a>
-                </p>
-              </li>
-               <li class="popular-brands-item">
-                 <p><a class="popular-brands-main" href="popular-brands.html">
-                     <img src="#" alt="Популярный производитель">
-                    </a>
-                 </p>
                </li>
                <li class="popular-brands-item">
-                  <p><a class="popular-brands-main" href="popular-brands.html">
+                <a class="popular-brands-main" href="popular-brands.html">
+                    <img src="#" alt="Популярный производитель">
+                   </a>
+               </li>
+               <li class="popular-brands-item">
+                 <a class="popular-brands-main" href="popular-brands.html">
                      <img src="#" alt="Популярный производитель">
                     </a>
-                  </p>
-                </li>
+               </li>
                <li class="popular-brands-item">
-                   <p><a class="popular-brands-main" href="popular-brands.html">
+                  <a class="popular-brands-main" href="popular-brands.html">
+                     <img src="#" alt="Популярный производитель">
+                    </a>
+               </li>
+               <li class="popular-brands-item">
+                  <a class="popular-brands-main" href="popular-brands.html">
                        <img src="#" alt="Популярный производитель">
                       </a>
-                   </p>
-                </li>
+               </li>
                <li class="popular-brands-item">
-                   <p><a class="popular-brands-main" href="popular-brands.html">
+                 <a class="popular-brands-main" href="popular-brands.html">
                        <img src="#" alt="Популярный производитель">
                       </a>
-                   </p>
-                </li>
+               </li>
                <li class="popular-brands-item">
-                   <p><a class="popular-brands-main" href="popular-brands.html">
+                 <a class="popular-brands-main" href="popular-brands.html">
                        <img src="#" alt="Популярный производитель">
                       </a>
-                   </p>
-                </li>
-                <li class="popular-brands-item">
-                   <p><a class="popular-brands-main" href="popular-brands.html">
+               </li>
+               <li class="popular-brands-item">
+                 <a class="popular-brands-main" href="popular-brands.html">
                        <img src="#" alt="Популярный производитель">
                      </a>
-                   </p>
-                </li>
+               </li>
               </ul>
         </section>
   <!--Сервисы-->
@@ -149,13 +140,13 @@
           <p>Хороший интернет-магазин отличается от плохого не только ценами! Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
           <ul class="service-list">
             <li class="service-item">
-              <span><a class="delivery" href="#">Доставка</a></span>
+              <a class="delivery" href="#">Доставка</a>
             </li>
             <li class="service-item">
-              <span><a class="warranty" href="#">Гарантия</a></span>
+              <a class="warranty" href="#">Гарантия</a>
             </li>
             <li class="service-item">
-              <span><a class="loan" href="#">Кредит</a></span>
+              <a class="loan" href="#">Кредит</a>
             </li>
           </ul>
         </section>
@@ -166,13 +157,13 @@
           <p>Мы можем доставить ваш товар в самые отдаленные точки России! Техномарт работает со многими транспортными компаниями:</p>
           <ul class="delivery-company-list">
             <li class="delivery-company-item">
-              <p>Деловые линии</p>
+              Деловые линии
             </li>
            <li class="delivery-company-item">
-              <p>Автотрейдинг</p>
+              Автотрейдинг
             </li>
            <li class="delivery-company-item">
-              <p>ЖелДорЭкспедиция</p>
+              ЖелДорЭкспедиция
             </li>
           </ul>
           <p><a class="botton" href="info.html">Подробнее о компании</a></p>
@@ -182,11 +173,11 @@
           <p>
             Вы можете забрать товар сами, заехав в наш офис:
           </p>
-          <a class="map-main"<img src="#" width="100" height="100" alt="улица Большая Конюшенная дом 19"></a>
+          <a class="map-main" img src="#" width="100" height="100" alt="улица Большая Конюшенная дом 19"></a>
        <!--Здесь будет форма обращения-->
         </section>
         <section>
-          <p <a class="button" href="writeus.html">Заблудились?Напишите нам!</a></p>
+          <a class="button" href="writeus.html">Заблудились?Напишите нам!</a>
         </section>
       </main>
     <footer class="main-footer">
